# identicon-take-home

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/akkio_take_home/: generate.py  identicon.py
tests/: test_identicon.py  test_image_generator.py
