[project]
    name = "akkio-take-home"
    version = "0.0"
    description = "akkio take home"
    authors = [{ name = "graham", email = "graham.annett@gmail.com" }]
    dependencies = ["pillow>=10.3.0"]
    requires-python = ">=3.11"
    readme = "README.md"
    license = { text = "None" }

[build-system]
    requires = ["pdm-backend"]
    build-backend = "pdm.backend"


[tool.pdm]
    distribution = true
